# video-digestor

./: .gitignore  AI_USAGE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
prompts/: book_format.md  default_article.md  default_summary.md
src/video_digestor/: __init__.py  abogus.py  cli.py  douyin.py  downloader.py  summarizer.py  transcriber.py  utils.py
