[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-digestor"
version = "0.1.0"
description = "本地视频内容抓取与总结工具 —— 把视频链接/文件转成可读 Markdown 笔记"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "yt-dlp>=2024.0",
    "openai>=1.0",
    "srt>=3.5",
    "gmssl>=3.2",
]

[project.optional-dependencies]
transcribe = ["faster-whisper>=1.0"]

[project.scripts]
video-digestor = "video_digestor.cli:app"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
